@@ -1,6 +1,6 @@
 Package: IsoriX
-Version: 0.5.1.9004
-Date: 2017-05-23
+Version: 0.5.1.9005
+Date: 2017-06-08
 Encoding: UTF-8
 Title: Isoscape Computation and Inference of Spatial Origins using Mixed Models
 Author:
